# pluton

./: .gitignore  Cargo.toml  README.md
crates/pluton/: Cargo.toml  tauri.conf.json
crates/pluton-core/: Cargo.toml
crates/pluton-core/src/: filepaths.rs  interfaces.rs  lib.rs  old_main.rs
crates/pluton-core/src/accounts/: credentials.rs  manager.rs  mod.rs
crates/pluton-mail/: Cargo.toml
crates/pluton-mail/src/: lib.rs
crates/pluton-mail/src/interface/: interface.rs  mod.rs  trait_impl.rs
crates/pluton-mail/src/protocol/: imap.rs  mod.rs  smtp.rs
crates/pluton/capabilities/: default.json
crates/pluton/src/: accounts.rs  filepaths.rs  lib.rs  mailbox.rs  main.rs  state.rs
crates/pluton/src/accounts/: manager.rs  mod.rs
crates/pluton/src/commands/: accounts.rs  mails.rs  mod.rs
crates/valium/: Cargo.toml
frontend/: nuxt.config.ts  package.json
frontend/app/: app.vue
frontend/app/assets/css/: main.css
frontend/app/components/: Centerer.vue  LoadingIcon.vue  Titlebar.vue
frontend/app/components/accounts/: Listing.vue
frontend/app/composables/: useTauriInvoke.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue
frontend/app/pages/accounts/: list.vue  new.vue
frontend/app/pages/mails/: [accountid].vue
