[workspace]
resolver = "3"
members = [
    "crates/pluton-mail",
    "crates/pluton-core"
]
default-members = ["crates/pluton"]

[workspace.dependencies]
lettre = "0.11.21"
thiserror = "2.0.18"
imap = "2.4.1"
native-tls = "0.2.18"
dirs = "6.0.0"
securestore = "0.100.2"
serde = "1.0.228"
serde_json = "1.0.149"
