[package]
name = "pluton-core"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = { workspace = true }
lettre = { workspace = true }
securestore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
pluton-mail = { path = "../pluton-mail" }
